Restore the latex concatenation. pandoc(0 rule doesn't uspport templates yet.

--- a/docs/BUILD
+++ b/docs/BUILD
@@ -32,7 +32,17 @@ pandoc(
     from_format = "markdown",
     output = "content.tex",  # If changed, then change \include{} in manual.tex
     to_format = "latex",
-    options = ["--template", ""],
+)
+
+genrule(
+    name = "manual_full_tex",
+    srcs = [
+        "manual_start.tex",
+        ":latex_content",
+        "manual_end.tex",
+    ],
+    outs = ["manual_full.tex"],
+    cmd = GENRULE_CONCATENATE,
 )
 
 latex_document(
