Move Bazel WORKSPACE to the root directory.
- The Bazel workspace should generally be the root. This is what we want for building the docs (#429) or the whole project (#304)
- This allows to reference the jflex.jar and the cup.jar directly; the Bazel script doesn't have to copy them anymore.

--- a/jflex/examples/simple/src/test/BUILD
+++ b/jflex/examples/simple/src/test/BUILD
@@ -6,7 +6,7 @@ java_test(
         "data/test.txt",
     ],
     deps = [
-        "//simple",
+        "//jflex/examples/simple",
         "//third_party/com/google/truth",
     ],
 )
