Add a genrule for cup

--- a/cup/BUILD
+++ b/cup/BUILD
@@ -2,6 +2,15 @@ package(default_visibility = ["//visibility:public"])
 
 licenses(["notice"])  # GPL-compatible
 
+java_binary(
+    name = "cup_bin",
+    main_class = "java_cup.Main",
+    runtime_deps = [
+        ":cup",
+        ":cup_runtime",
+    ],
+)
+
 java_import(
     name = "cup",
     jars = ["cup/target/cup-11b.jar"],
