Build Manual with Bazel (#439)
* Build the concatenated manual.mdx with Bazel
  - Do variable substirtution in manual.mdx

* Build manual.html with pandoc
  - Generate manual.html with Bazel rule
  - using my fork version of bazel_pandoc because the orginal one doesn't allow to sepcifiy the output.

* Try to add the pandoc options. All failed :-/

* Add pandoc target to generate manual.tex
  - Split xmanual.tex in two, because I can't make \include{} to work
  -  Remove image inclusion, because I can't resolve the path in the runtime dir.

* Add \tightlist macro in yemplate
  - Latest version of pandoc uses \tightlist defined in template https://github.com/jgm/pandoc-templates/blob/master/default.latex

* Build the PDF with Bazel
(first pass)
  - Comment out scrartcl
     The Bazel rule doesn't know about https://ctan.org/pkg/scrartcl
  - I can't make \include{} work with latex_document{} either.
  Instead, concatenate the files
- Many packages missing ; I rewrote a trivial document.

* Can't use pandoc template
  - this is not supported yet by the bazel rule.
  - concatenate manual_star.tex manual_content.tex manual_end.tex

* Remove useless cd jflex/examples in bazel.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ matrix:
   - name: "👴 Examples (mvn, ant, make) — JDK7"
     script: scripts/test-examples.sh
     jdk: openjdk7
-  - name: "😎 Examples (with Bazel)"
+  - name: "💚 Bazel (Examples and documentation)"
     language: generic
     script:
     - scripts/mvn-install-fastbuild.sh
