--- a/cup/sample-project/BUILD
+++ b/cup/sample-project/BUILD
@@ -2,5 +2,5 @@ load("//cup:cup.bzl", "cup")
 
 cup(
     name = "gen_parser",
-    srcs = ["src/main/cup/calculator.cup"],
+    src = "src/main/cup/calculator.cup",
 )
