Bazel uses the original java-cup.jar rather than the one built by Maven
Maven extracts the runtime, but we don't need this, I believe.

--- a/cup/BUILD
+++ b/cup/BUILD
@@ -7,13 +7,13 @@ java_binary(
     main_class = "java_cup.Main",
     runtime_deps = [
         ":cup",
-        ":cup_runtime",
     ],
 )
 
+# This is the full Java CUP (with runtime)
 java_import(
     name = "cup",
-    jars = ["cup/target/cup-11b.jar"],
+    jars = ["cup/java-cup-11b.jar"],
 )
 
 alias(
