--- a/testsuite/javatests/jflex/testcase/apipirivate/BUILD
+++ b/testsuite/javatests/jflex/testcase/apipirivate/BUILD
@@ -1,7 +1,8 @@
 java_test(
     name = "ApiPrivateTest",
     srcs = ["ApiPrivateTest.java"],
-    deps =[
-        "//testsuite/bzltestsuite"
-    ]
+    data = ["private.flex"],
+    deps = [
+        "//testsuite/bzltestsuite",
+    ],
 )
