Add compile test in ApiPrivate
The test fails (as expected) with
1) compile(jflex.testcase.apipirivate.ApiPrivateTest)
jflex.testing.exception.CompilerException: javac exception
javac error: yylex() has private access in jflex.testcase.apipirivate.Private, line 10 in file testsuite/javatests/jflex/testcase/apipirivate/AttemptPrivateAccess.java

--- a/testsuite/javatests/jflex/testcase/apipirivate/BUILD
+++ b/testsuite/javatests/jflex/testcase/apipirivate/BUILD
@@ -1,8 +1,10 @@
 java_test(
     name = "ApiPrivateTest",
     srcs = ["ApiPrivateTest.java"],
-    data = ["private.flex"],
+    data = ["private.flex", "AttemptPrivateAccess.java"],
     deps = [
         "//testsuite/bzltestsuite",
+        "//third_party/com/google/guava",
+        "//third_party/com/google/truth",
     ],
 )
