--- a/.travis.yml
+++ b/.travis.yml
@@ -91,6 +91,9 @@ matrix:
       repo: jflex_manual
       vcs_url: https://github.com/jflex-de/jflex/tree/master/docs
       licenses: ["BSD-3"]
+      on:
+      - travis
+      - master
 
 # Empty the previously built artifacts
 # They cannot be deleted in the before_cache phase,
