--- a/jflex/common-testing/src/main/java/jflex/common/testing/BUILD
+++ b/jflex/common-testing/src/main/java/jflex/common/testing/BUILD
@@ -1,4 +1,11 @@
+package(default_visibility = ["//testsuite:__subpackages__", "//jflex/examples:__subpackages__"])
+
 java_library(
     name = "testing",
     srcs = glob(["*.java"]),
+    testonly = True,
+    deps=[
+        "//third_party/com/google/guava",
+        "//third_party/com/google/truth",
+    ]
 )
