Make solution generic. Test author must provide a bazel path instead.

--- a/jflex/common-testing/src/main/java/jflex/common/testing/BUILD
+++ b/jflex/common-testing/src/main/java/jflex/common/testing/BUILD
@@ -1,11 +1,15 @@
-package(default_visibility = ["//testsuite:__subpackages__", "//jflex/examples:__subpackages__"])
+package(default_visibility = [
+    "//testsuite:__subpackages__",
+    "//jflex/examples:__subpackages__",
+    "//jflex/common-testing:__subpackages__",
+])
 
 java_library(
     name = "testing",
     srcs = glob(["*.java"]),
     testonly = True,
-    deps=[
+    deps = [
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
-    ]
+    ],
 )
