--- a/cup/cup_runtime/BUILD
+++ b/cup/cup_runtime/BUILD
@@ -1,6 +1,7 @@
 licenses(["notice"])  # BSD-like
+
 java_library(
     name = "cup_runtime",
     srcs = glob(["src/main/java/**/*.java"]),
-    visibility=["//visibility:public"]
+    visibility = ["//visibility:public"],
 )
