Add dep on autovalue in bazel build

--- a/jflex/BUILD
+++ b/jflex/BUILD
@@ -22,6 +22,7 @@ java_library(
     visibility = ["//visibility:public"],
     deps = [
         "//cup",
+        "//third_party/com/google/auto_value",
         "//third_party/org/apache/ant",
     ],
 )
