--- a/.travis.yml
+++ b/.travis.yml
@@ -81,9 +81,7 @@ matrix:
     deploy:
       provider: bintray
       skip_cleanup: true
-      file:
-      - docs/manual.pdf
-      - docs/manual.html
+      file: docs/manual.pdf
       user: "rgs"
       key:
         secure: $BINTRAY_API_KEY
