Use cup.bzl from bazel_rules

--- a/jflex/BUILD
+++ b/jflex/BUILD
@@ -1,6 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 
-load("//cup:cup.bzl", "cup")
+load("@jflex_rules//cup:cup.bzl", "cup")
 load("@jflex_rules//jflex:jflex.bzl", "jflex")
 
 java_binary(
