--- a/.travis.yml
+++ b/.travis.yml
@@ -136,4 +136,8 @@ deploy:
     - $PUBLISH_SOURCES
   script:
     - echo "Push to https://github.com/jflex-de/jflex/tree/aggregated-java-sources"
-    - cd repo; git push
+    # SECURITY NOTICE: Be sure to send stdout & stderr to /dev/null so that the the ${GITHUB_TOKEN} is never revealed
+    - cd repo
+    - git remote set-url --push origin "https://${GITHUB_TOKEN}@github.com/jflex-de/jflex.git" repo > /dev/null 2>&1
+    - git push
+
