--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ matrix:
     - scripts/test-unit.sh
     - scripts/mvn-site.sh
     - scripts/mvn-aggregate-srcs.sh
+    - scripts/preparare-deploy-source-code.sh
     after_success: scripts/send-code-coverage.sh
     env:
     - PUBLISH_SOURCES=true
@@ -133,4 +134,10 @@ deploy:
     - travis
     condition:
     - $PUBLISH_SOURCES
-  script: ./scripts/deploy-source-code.sh
+  script:
+    - echo "Push to https://github.com/jflex-de/jflex/tree/aggregated-java-sources"
+    # SECURITY NOTICE: Be sure to send stdout & stderr to /dev/null so that the the ${GITHUB_TOKEN} is never revealed
+    - cd repo
+    - git remote set-url --push origin "https://${GITHUB_TOKEN}@github.com/jflex-de/jflex.git" repo > /dev/null 2>&1
+    - git push
+
