--- a/cup/sample-project/BUILD
+++ b/cup/sample-project/BUILD
@@ -3,4 +3,5 @@ load("@jflex_rules//cup:cup.bzl", "cup")
 cup(
     name = "gen_parser",
     src = "src/main/cup/calculator.cup",
+    cup_bin = "@jflex_rules//cup:cup_bin",
 )
