--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,7 +6,7 @@ container:
 task:
   name: Bazel build and test
   build_script:
-  - bazel info release
+  - bazel --bazelrc=.ci.bazelrc info release
   - bazel --bazelrc=.ci.bazelrc build --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST //...
   test_script:
   - bazel --bazelrc=.ci.bazelrc test --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST //...
