Add all error=prone checks

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,4 +1,340 @@
-# https://errorprone.info/
+http://errorprone.info/bugpatterns
+build --javacopt "-Xep:ArrayEquals:ERROR"
+build --javacopt "-Xep:ArrayFillIncompatibleType:ERROR"
+build --javacopt "-Xep:ArrayHashCode:ERROR"
+build --javacopt "-Xep:ArrayToString:ERROR"
+build --javacopt "-Xep:ArraysAsListPrimitiveArray:ERROR"
+build --javacopt "-Xep:AsyncCallableReturnsNull:ERROR"
+build --javacopt "-Xep:AsyncFunctionReturnsNull:ERROR"
+build --javacopt "-Xep:AutoValueConstructorOrderChecker:ERROR"
+build --javacopt "-Xep:BadShiftAmount:ERROR"
+build --javacopt "-Xep:BundleDeserializationCast:ERROR"
+build --javacopt "-Xep:ChainingConstructorIgnoresParameter:ERROR"
+build --javacopt "-Xep:CheckReturnValue:ERROR"
+build --javacopt "-Xep:CollectionIncompatibleType:ERROR"
+build --javacopt "-Xep:ComparableType:ERROR"
+build --javacopt "-Xep:ComparingThisWithNull:ERROR"
+build --javacopt "-Xep:ComparisonOutOfRange:ERROR"
+build --javacopt "-Xep:CompatibleWithAnnotationMisuse:ERROR"
+build --javacopt "-Xep:CompileTimeConstant:ERROR"
+build --javacopt "-Xep:ComplexBooleanConstant:ERROR"
+build --javacopt "-Xep:ConditionalExpressionNumericPromotion:ERROR"
+build --javacopt "-Xep:ConstantOverflow:ERROR"
+build --javacopt "-Xep:DaggerProvidesNull:ERROR"
+build --javacopt "-Xep:DeadException:ERROR"
+build --javacopt "-Xep:DeadThread:ERROR"
+build --javacopt "-Xep:DoNotCall:ERROR"
+build --javacopt "-Xep:EqualsNaN:ERROR"
+build --javacopt "-Xep:EqualsReference:ERROR"
+build --javacopt "-Xep:EqualsWrongThing:ERROR"
+build --javacopt "-Xep:ForOverride:ERROR"
+build --javacopt "-Xep:FormatString:ERROR"
+build --javacopt "-Xep:FormatStringAnnotation:ERROR"
+build --javacopt "-Xep:FunctionalInterfaceMethodChanged:ERROR"
+build --javacopt "-Xep:FuturesGetCheckedIllegalExceptionType:ERROR"
+build --javacopt "-Xep:GetClassOnAnnotation:ERROR"
+build --javacopt "-Xep:GetClassOnClass:ERROR"
+build --javacopt "-Xep:GuardedBy:ERROR"
+build --javacopt "-Xep:GuiceAssistedInjectScoping:ERROR"
+build --javacopt "-Xep:GuiceAssistedParameters:ERROR"
+build --javacopt "-Xep:GuiceInjectOnFinalField:ERROR"
+build --javacopt "-Xep:HashtableContains:ERROR"
+build --javacopt "-Xep:IdentityBinaryExpression:ERROR"
+build --javacopt "-Xep:Immutable:ERROR"
+build --javacopt "-Xep:ImmutableModification:ERROR"
+build --javacopt "-Xep:IncompatibleArgumentType:ERROR"
+build --javacopt "-Xep:IndexOfChar:ERROR"
+build --javacopt "-Xep:InexactVarargsConditional:ERROR"
+build --javacopt "-Xep:InfiniteRecursion:ERROR"
+build --javacopt "-Xep:InjectMoreThanOneScopeAnnotationOnClass:ERROR"
+build --javacopt "-Xep:InjectOnMemberAndConstructor:ERROR"
+build --javacopt "-Xep:InvalidPatternSyntax:ERROR"
+build --javacopt "-Xep:InvalidTimeZoneID:ERROR"
+build --javacopt "-Xep:IsInstanceOfClass:ERROR"
+build --javacopt "-Xep:IsLoggableTagLength:ERROR"
+build --javacopt "-Xep:JUnit3TestNotRun:ERROR"
+build --javacopt "-Xep:JUnit4ClassAnnotationNonStatic:ERROR"
+build --javacopt "-Xep:JUnit4SetUpNotRun:ERROR"
+build --javacopt "-Xep:JUnit4TearDownNotRun:ERROR"
+build --javacopt "-Xep:JUnit4TestNotRun:ERROR"
+build --javacopt "-Xep:JUnitAssertSameCheck:ERROR"
+build --javacopt "-Xep:JavaxInjectOnAbstractMethod:ERROR"
+build --javacopt "-Xep:LiteByteStringUtf8:ERROR"
+build --javacopt "-Xep:This pattern will silently corrupt certain byte sequences from the serialized protocol message. Use ByteString or byte[] directly:ERROR"
+build --javacopt "-Xep::ERROR"
+build --javacopt "-Xep:LoopConditionChecker:ERROR"
+build --javacopt "-Xep:MathRoundIntLong:ERROR"
+build --javacopt "-Xep:MislabeledAndroidString:ERROR"
+build --javacopt "-Xep:MissingSuperCall:ERROR"
+build --javacopt "-Xep:MissingTestCall:ERROR"
+build --javacopt "-Xep:MisusedWeekYear:ERROR"
+build --javacopt "-Xep:MockitoCast:ERROR"
+build --javacopt "-Xep:MockitoUsage:ERROR"
+build --javacopt "-Xep:ModifyingCollectionWithItself:ERROR"
+build --javacopt "-Xep:MoreThanOneInjectableConstructor:ERROR"
+build --javacopt "-Xep:MustBeClosedChecker:ERROR"
+build --javacopt "-Xep:NCopiesOfChar:ERROR"
+build --javacopt "-Xep:NonCanonicalStaticImport:ERROR"
+build --javacopt "-Xep:NonFinalCompileTimeConstant:ERROR"
+build --javacopt "-Xep:NonRuntimeAnnotation:ERROR"
+build --javacopt "-Xep:NullTernary:ERROR"
+build --javacopt "-Xep:OptionalEquality:ERROR"
+build --javacopt "-Xep:OverlappingQualifierAndScopeAnnotation:ERROR"
+build --javacopt "-Xep:OverridesJavaxInjectableMethod:ERROR"
+build --javacopt "-Xep:PackageInfo:ERROR"
+build --javacopt "-Xep:ParcelableCreator:ERROR"
+build --javacopt "-Xep:PreconditionsCheckNotNull:ERROR"
+build --javacopt "-Xep:PreconditionsCheckNotNullPrimitive:ERROR"
+build --javacopt "-Xep:PredicateIncompatibleType:ERROR"
+build --javacopt "-Xep:PrivateSecurityContractProtoAccess:ERROR"
+build --javacopt "-Xep:ProtoFieldNullComparison:ERROR"
+build --javacopt "-Xep:ProtoStringFieldReferenceEquality:ERROR"
+build --javacopt "-Xep:ProtocolBufferOrdinal:ERROR"
+build --javacopt "-Xep:ProvidesMethodOutsideOfModule:ERROR"
+build --javacopt "-Xep:RandomCast:ERROR"
+build --javacopt "-Xep:RandomModInteger:ERROR"
+build --javacopt "-Xep:RectIntersectReturnValueIgnored:ERROR"
+build --javacopt "-Xep:RestrictedApiChecker:ERROR"
+build --javacopt "-Xep:ReturnValueIgnored:ERROR"
+build --javacopt "-Xep:SelfAssignment:ERROR"
+build --javacopt "-Xep:SelfComparison:ERROR"
+build --javacopt "-Xep:SelfEquals:ERROR"
+build --javacopt "-Xep:ShouldHaveEvenArgs:ERROR"
+build --javacopt "-Xep:SizeGreaterThanOrEqualsZero:ERROR"
+build --javacopt "-Xep:StreamToString:ERROR"
+build --javacopt "-Xep:StringBuilderInitWithChar:ERROR"
+build --javacopt "-Xep:SubstringOfZero:ERROR"
+build --javacopt "-Xep:SuppressWarningsDeprecated:ERROR"
+build --javacopt "-Xep:ThrowIfUncheckedKnownChecked:ERROR"
+build --javacopt "-Xep:ThrowNull:ERROR"
+build --javacopt "-Xep:TruthSelfEquals:ERROR"
+build --javacopt "-Xep:TryFailThrowable:ERROR"
+build --javacopt "-Xep:TypeParameterQualifier:ERROR"
+build --javacopt "-Xep:UnnecessaryTypeArgument:ERROR"
+build --javacopt "-Xep:UnusedAnonymousClass:ERROR"
+build --javacopt "-Xep:UnusedCollectionModifiedInPlace:ERROR"
+build --javacopt "-Xep:VarTypeName:ERROR"
+build --javacopt "-Xep:On by default : WARNING:ERROR"
+build --javacopt "-Xep:AmbiguousMethodReference:ERROR"
+build --javacopt "-Xep:ArgumentSelectionDefectChecker:ERROR"
+build --javacopt "-Xep:ArrayAsKeyOfSetOrMap:ERROR"
+build --javacopt "-Xep:AssertEqualsArgumentOrderChecker:ERROR"
+build --javacopt "-Xep:AssertThrowsMultipleStatements:ERROR"
+build --javacopt "-Xep:AssertionFailureIgnored:ERROR"
+build --javacopt "-Xep:AutoValueFinalMethods:ERROR"
+build --javacopt "-Xep:BadAnnotationImplementation:ERROR"
+build --javacopt "-Xep:BadComparable:ERROR"
+build --javacopt "-Xep:BadImport:ERROR"
+build --javacopt "-Xep:BadInstanceof:ERROR"
+build --javacopt "-Xep:BigDecimalEquals:ERROR"
+build --javacopt "-Xep:BigDecimalLiteralDouble:ERROR"
+build --javacopt "-Xep:BoxedPrimitiveConstructor:ERROR"
+build --javacopt "-Xep:ByteBufferBackingArray:ERROR"
+build --javacopt "-Xep:CannotMockFinalClass:ERROR"
+build --javacopt "-Xep:CanonicalDuration:ERROR"
+build --javacopt "-Xep:CatchAndPrintStackTrace:ERROR"
+build --javacopt "-Xep:CatchFail:ERROR"
+build --javacopt "-Xep:ClassCanBeStatic:ERROR"
+build --javacopt "-Xep:ClassNewInstance:ERROR"
+build --javacopt "-Xep:CloseableProvides:ERROR"
+build --javacopt "-Xep:CollectionToArraySafeParameter:ERROR"
+build --javacopt "-Xep:CollectorShouldNotUseState:ERROR"
+build --javacopt "-Xep:ComparableAndComparator:ERROR"
+build --javacopt "-Xep:DateFormatConstant:ERROR"
+build --javacopt "-Xep:DefaultCharset:ERROR"
+build --javacopt "-Xep:DeprecatedThreadMethods:ERROR"
+build --javacopt "-Xep:DoubleBraceInitialization:ERROR"
+build --javacopt "-Xep:DoubleCheckedLocking:ERROR"
+build --javacopt "-Xep:EqualsGetClass:ERROR"
+build --javacopt "-Xep:EqualsHashCode:ERROR"
+build --javacopt "-Xep:EqualsIncompatibleType:ERROR"
+build --javacopt "-Xep:EqualsUnsafeCast:ERROR"
+build --javacopt "-Xep:EqualsUsingHashCode:ERROR"
+build --javacopt "-Xep:ExtendingJUnitAssert:ERROR"
 # TODO(#222) Increase to error when we build from jflex-1.7.1 with a lexer annotated with
 # @SuppressWarnings
 build --javacopt "-Xep:FallThrough:WARN"
+build --javacopt "-Xep:Finally:ERROR"
+build --javacopt "-Xep:FloatCast:ERROR"
+build --javacopt "-Xep:FloatingPointAssertionWithinEpsilon:ERROR"
+build --javacopt "-Xep:FloatingPointLiteralPrecision:ERROR"
+build --javacopt "-Xep:FragmentInjection:ERROR"
+build --javacopt "-Xep:FragmentNotInstantiable:ERROR"
+build --javacopt "-Xep:FutureReturnValueIgnored:ERROR"
+build --javacopt "-Xep:GetClassOnEnum:ERROR"
+build --javacopt "-Xep:HidingField:ERROR"
+build --javacopt "-Xep:ImmutableAnnotationChecker:ERROR"
+build --javacopt "-Xep:ImmutableEnumChecker:ERROR"
+build --javacopt "-Xep:IncompatibleModifiers:ERROR"
+build --javacopt "-Xep:InconsistentCapitalization:ERROR"
+build --javacopt "-Xep:InconsistentHashCode:ERROR"
+build --javacopt "-Xep:IncrementInForLoopAndHeader:ERROR"
+build --javacopt "-Xep:InjectOnConstructorOfAbstractClass:ERROR"
+build --javacopt "-Xep:InputStreamSlowMultibyteRead:ERROR"
+build --javacopt "-Xep:InstanceOfAndCastMatchWrongType:ERROR"
+build --javacopt "-Xep:IntLongMath:ERROR"
+build --javacopt "-Xep:IterableAndIterator:ERROR"
+build --javacopt "-Xep:JUnit3FloatingPointComparisonWithoutDelta:ERROR"
+build --javacopt "-Xep:JUnit4ClassUsedInJUnit3:ERROR"
+build --javacopt "-Xep:Some JUnit4 construct cannot be used in a JUnit3 context. Convert your class to JUnit4 style to use them.:ERROR"
+build --javacopt "-Xep::ERROR"
+build --javacopt "-Xep:JUnitAmbiguousTestClass:ERROR"
+build --javacopt "-Xep:JavaLangClash:ERROR"
+build --javacopt "-Xep:JdkObsolete:ERROR"
+build --javacopt "-Xep:LockNotBeforeTry:ERROR"
+build --javacopt "-Xep:LogicalAssignment:ERROR"
+build --javacopt "-Xep:MathAbsoluteRandom:ERROR"
+build --javacopt "-Xep:MissingCasesInEnumSwitch:ERROR"
+build --javacopt "-Xep:MissingFail:ERROR"
+build --javacopt "-Xep:MissingOverride:ERROR"
+build --javacopt "-Xep:ModifiedButNotUsed:ERROR"
+build --javacopt "-Xep:ModifyCollectionInEnhancedForLoop:ERROR"
+build --javacopt "-Xep:MultipleParallelOrSequentialCalls:ERROR"
+build --javacopt "-Xep:MutableConstantField:ERROR"
+build --javacopt "-Xep:NarrowingCompoundAssignment:ERROR"
+build --javacopt "-Xep:NestedInstanceOfConditions:ERROR"
+build --javacopt "-Xep:NonAtomicVolatileUpdate:ERROR"
+build --javacopt "-Xep:NonOverridingEquals:ERROR"
+build --javacopt "-Xep:NullableConstructor:ERROR"
+build --javacopt "-Xep:NullablePrimitive:ERROR"
+build --javacopt "-Xep:NullableVoid:ERROR"
+build --javacopt "-Xep:ObjectToString:ERROR"
+build --javacopt "-Xep:ObjectsHashCodePrimitive:ERROR"
+build --javacopt "-Xep:OperatorPrecedence:ERROR"
+build --javacopt "-Xep:OptionalNotPresent:ERROR"
+build --javacopt "-Xep:OrphanedFormatString:ERROR"
+build --javacopt "-Xep:OverrideThrowableToString:ERROR"
+build --javacopt "-Xep:Overrides:ERROR"
+build --javacopt "-Xep:OverridesGuiceInjectableMethod:ERROR"
+build --javacopt "-Xep:ParameterName:ERROR"
+build --javacopt "-Xep:PreconditionsInvalidPlaceholder:ERROR"
+build --javacopt "-Xep:ProtoRedundantSet:ERROR"
+build --javacopt "-Xep:QualifierOrScopeOnInjectMethod:ERROR"
+build --javacopt "-Xep:ReachabilityFenceUsage:ERROR"
+build --javacopt "-Xep:ReferenceEquality:ERROR"
+build --javacopt "-Xep:RequiredModifiers:ERROR"
+build --javacopt "-Xep:ShortCircuitBoolean:ERROR"
+build --javacopt "-Xep:StaticGuardedByInstance:ERROR"
+build --javacopt "-Xep:StreamResourceLeak:ERROR"
+build --javacopt "-Xep:StringSplitter:ERROR"
+build --javacopt "-Xep:SwigMemoryLeak:ERROR"
+build --javacopt "-Xep:SynchronizeOnNonFinalField:ERROR"
+build --javacopt "-Xep:ThreadJoinLoop:ERROR"
+build --javacopt "-Xep:ThreadLocalUsage:ERROR"
+build --javacopt "-Xep:ThreadPriorityCheck:ERROR"
+build --javacopt "-Xep:ThreeLetterTimeZoneID:ERROR"
+build --javacopt "-Xep:ToStringReturnsNull:ERROR"
+build --javacopt "-Xep:TruthAssertExpected:ERROR"
+build --javacopt "-Xep:TruthConstantAsserts:ERROR"
+build --javacopt "-Xep:TruthIncompatibleType:ERROR"
+build --javacopt "-Xep:TypeNameShadowing:ERROR"
+build --javacopt "-Xep:TypeParameterShadowing:ERROR"
+build --javacopt "-Xep:TypeParameterUnusedInFormals:ERROR"
+build --javacopt "-Xep:URLEqualsHashCode:ERROR"
+build --javacopt "-Xep:UndefinedEquals:ERROR"
+build --javacopt "-Xep:UnnecessaryParentheses:ERROR"
+build --javacopt "-Xep:UnsafeFinalization:ERROR"
+build --javacopt "-Xep:UnsafeReflectiveConstructionCast:ERROR"
+build --javacopt "-Xep:UnsynchronizedOverridesSynchronized:ERROR"
+build --javacopt "-Xep:UseCorrectAssertInTests:ERROR"
+build --javacopt "-Xep:VariableNameSameAsType:ERROR"
+build --javacopt "-Xep:WaitNotInLoop:ERROR"
+build --javacopt "-Xep:WakelockReleasedDangerously:ERROR"
+build --javacopt "-Xep:Experimental : ERROR:ERROR"
+build --javacopt "-Xep:AndroidJdkLibsChecker:ERROR"
+build --javacopt "-Xep:AssistedInjectAndInjectOnSameConstructor:ERROR"
+build --javacopt "-Xep:AutoFactoryAtInject:ERROR"
+build --javacopt "-Xep:ClassName:ERROR"
+build --javacopt "-Xep:ComparisonContractViolated:ERROR"
+build --javacopt "-Xep:DepAnn:ERROR"
+build --javacopt "-Xep:DivZero:ERROR"
+build --javacopt "-Xep:EmptyIf:ERROR"
+build --javacopt "-Xep:FuzzyEqualsShouldNotBeUsedInEqualsMethod:ERROR"
+build --javacopt "-Xep:InjectInvalidTargetingOnScopingAnnotation:ERROR"
+build --javacopt "-Xep:InjectMoreThanOneQualifier:ERROR"
+build --javacopt "-Xep:InjectScopeAnnotationOnInterfaceOrAbstractClass:ERROR"
+build --javacopt "-Xep:InjectScopeOrQualifierAnnotationRetention:ERROR"
+build --javacopt "-Xep:InjectedConstructorAnnotations:ERROR"
+build --javacopt "-Xep:InsecureCryptoUsage:ERROR"
+build --javacopt "-Xep:IterablePathParameter:ERROR"
+build --javacopt "-Xep:JMockTestWithoutRunWithOrRuleAnnotation:ERROR"
+build --javacopt "-Xep:Java7ApiChecker:ERROR"
+build --javacopt "-Xep:JavaxInjectOnFinalField:ERROR"
+build --javacopt "-Xep:LockMethodChecker:ERROR"
+build --javacopt "-Xep:LongLiteralLowerCaseSuffix:ERROR"
+build --javacopt "-Xep:NoAllocation:ERROR"
+build --javacopt "-Xep:NumericEquality:ERROR"
+build --javacopt "-Xep:ParameterPackage:ERROR"
+build --javacopt "-Xep:RestrictTo:ERROR"
+build --javacopt "-Xep:StaticOrDefaultInterfaceMethod:ERROR"
+build --javacopt "-Xep:UnlockMethod:ERROR"
+build --javacopt "-Xep:Experimental : WARNING:ERROR"
+build --javacopt "-Xep:AnnotateFormatMethod:ERROR"
+build --javacopt "-Xep:AnnotationPosition:ERROR"
+build --javacopt "-Xep:AssertFalse:ERROR"
+build --javacopt "-Xep:AssistedInjectAndInjectOnConstructors:ERROR"
+build --javacopt "-Xep:BinderIdentityRestoredDangerously:ERROR"
+build --javacopt "-Xep:BindingToUnqualifiedCommonType:ERROR"
+build --javacopt "-Xep:ConstructorInvokesOverridable:ERROR"
+build --javacopt "-Xep:ConstructorLeaksThis:ERROR"
+build --javacopt "-Xep:EmptyTopLevelDeclaration:ERROR"
+build --javacopt "-Xep:EqualsBrokenForNull:ERROR"
+build --javacopt "-Xep:ExpectedExceptionChecker:ERROR"
+build --javacopt "-Xep:FunctionalInterfaceClash:ERROR"
+build --javacopt "-Xep:HardCodedSdCardPath:ERROR"
+build --javacopt "-Xep:InconsistentOverloads:ERROR"
+build --javacopt "-Xep:InvalidParam:ERROR"
+build --javacopt "-Xep:InvalidTag:ERROR"
+build --javacopt "-Xep:InvalidThrows:ERROR"
+build --javacopt "-Xep:MissingDefault:ERROR"
+build --javacopt "-Xep:MutableMethodReturnType:ERROR"
+build --javacopt "-Xep:NoFunctionalReturnType:ERROR"
+build --javacopt "-Xep:NonCanonicalStaticMemberImport:ERROR"
+build --javacopt "-Xep:NullableDereference:ERROR"
+build --javacopt "-Xep:PrimitiveArrayPassedToVarargsMethod:ERROR"
+build --javacopt "-Xep:ProtosAsKeyOfSetOrMap:ERROR"
+build --javacopt "-Xep:ProvidesFix:ERROR"
+build --javacopt "-Xep:QualifierWithTypeUse:ERROR"
+build --javacopt "-Xep:RedundantThrows:ERROR"
+build --javacopt "-Xep:ReturnFromVoid:ERROR"
+build --javacopt "-Xep:StaticQualifiedUsingExpression:ERROR"
+build --javacopt "-Xep:StringEquality:ERROR"
+build --javacopt "-Xep:SystemExitOutsideMain:ERROR"
+build --javacopt "-Xep:TestExceptionChecker:ERROR"
+build --javacopt "-Xep:UnnecessaryDefaultInEnumSwitch:ERROR"
+build --javacopt "-Xep:Unused:ERROR"
+build --javacopt "-Xep:UnusedException:ERROR"
+build --javacopt "-Xep:Var:ERROR"
+build --javacopt "-Xep:Experimental : SUGGESTION:ERROR"
+build --javacopt "-Xep:BooleanParameter:ERROR"
+build --javacopt "-Xep:ClassNamedLikeTypeParameter:ERROR"
+build --javacopt "-Xep:ConstantField:ERROR"
+build --javacopt "-Xep:EmptySetMultibindingContributions:ERROR"
+build --javacopt "-Xep:ExpectedExceptionRefactoring:ERROR"
+build --javacopt "-Xep:FieldCanBeFinal:ERROR"
+build --javacopt "-Xep:FieldMissingNullable:ERROR"
+build --javacopt "-Xep:ImmutableRefactoring:ERROR"
+build --javacopt "-Xep:LambdaFunctionalInterface:ERROR"
+build --javacopt "-Xep:MethodCanBeStatic:ERROR"
+build --javacopt "-Xep:MixedArrayDimensions:ERROR"
+build --javacopt "-Xep:MultiVariableDeclaration:ERROR"
+build --javacopt "-Xep:MultipleTopLevelClasses:ERROR"
+build --javacopt "-Xep:MultipleUnaryOperatorsInMethodCall:ERROR"
+build --javacopt "-Xep:PackageLocation:ERROR"
+build --javacopt "-Xep:ParameterComment:ERROR"
+build --javacopt "-Xep:ParameterNotNullable:ERROR"
+build --javacopt "-Xep:PrivateConstructorForNoninstantiableModule:ERROR"
+build --javacopt "-Xep:PrivateConstructorForUtilityClass:ERROR"
+build --javacopt "-Xep:RemoveUnusedImports:ERROR"
+build --javacopt "-Xep:ReturnMissingNullable:ERROR"
+build --javacopt "-Xep:ScopeOnModule:ERROR"
+build --javacopt "-Xep:SwitchDefault:ERROR"
+build --javacopt "-Xep:TestExceptionRefactoring:ERROR"
+build --javacopt "-Xep:ThrowsUncheckedException:ERROR"
+build --javacopt "-Xep:TryFailRefactoring:ERROR"
+build --javacopt "-Xep:TypeParameterNaming:ERROR"
+build --javacopt "-Xep:UngroupedOverloads:ERROR"
+build --javacopt "-Xep:UnnecessarySetDefault:ERROR"
+build --javacopt "-Xep:UnnecessaryStaticImport:ERROR"
+build --javacopt "-Xep:UseBinds:ERROR"
+build --javacopt "-Xep:WildcardImport:ERROR"
