Adjust levels to allow compilation
Filed #470 to track resolution

--- a/testsuite/bzltestsuite/java/jflex/testing/javac/BUILD
+++ b/testsuite/bzltestsuite/java/jflex/testing/javac/BUILD
@@ -6,4 +6,8 @@ java_library(
     deps = [
         "//third_party/com/google/guava",
     ],
+    javacopts = [
+        # Only used for testing
+        "-Xep:Java7ApiChecker:OFF",
+        ],
 )
