--- a/cup/cup_runtime/BUILD
+++ b/cup/cup_runtime/BUILD
@@ -2,5 +2,8 @@ licenses(["notice"])  # BSD-like
 java_library(
     name = "cup_runtime",
     srcs = glob(["src/main/java/**/*.java"]),
-    visibility=["//visibility:public"]
+    visibility=["//visibility:public"],
+    javacopts=[
+        # Not our code, there is nothing we can do
+        "-XepDisableAllChecks"],
 )
