Use cup.bzl from bazel_rules (#466)
* Use cup.bzl from bazel_rules
  https://github.com/jflex-de/bazel_rules

**N.B.** Cannot remove cup
Still needed by Maven

--- a/cup/sample-project/BUILD
+++ b/cup/sample-project/BUILD
@@ -1,6 +1,7 @@
-load("//cup:cup.bzl", "cup")
+load("@jflex_rules//cup:cup.bzl", "cup")
 
 cup(
     name = "gen_parser",
     src = "src/main/cup/calculator.cup",
+    cup_bin = "@jflex_rules//cup:cup_bin",
 )
