Add BUILD file for package performance

--- a/jflex/BUILD
+++ b/jflex/BUILD
@@ -3,6 +3,11 @@ package(default_visibility = ["//visibility:public"])
 load("@jflex_rules//cup:cup.bzl", "cup")
 load("@jflex_rules//jflex:jflex.bzl", "jflex")
 
+package_group(
+    name = "visibility",
+    packages = ["//jflex/..."],
+)
+
 java_binary(
     name = "jflex_bin",
     main_class = "jflex.Main",
@@ -22,6 +27,7 @@ java_library(
     visibility = ["//visibility:public"],
     deps = [
         "//cup:cup_runtime",
+        "//jflex/src/main/java/jflex/performance",
         "//third_party/org/apache/ant",
     ],
 )
