--- a/scripts/degraph/dep-graph.cfg
+++ b/scripts/degraph/dep-graph.cfg
@@ -6,10 +6,21 @@ classpath = bazel-bin/jflex/libjflex.jar
 output = /tmp/jflex-packages.graphml
 
 # Include all of JFlex
-include = jflex.**
+#include = jflex.**
+# Exclude Java SDK itself.
+exclude = java.**
 # Exclude generated classes
 exclude = **.*_*
+exclude = \[**
 
-sub_packages = {
-  jflex.**
+packages = {
+  org.apache.tools.(*).**
+  org.apache.(*).**
+  org.(*).**
+  (java_cup).**
+  (jflex.*).**
+}
+internalExternal = {
+  internal jflex.**
+  external **
 }
