--- a/jflex/BUILD
+++ b/jflex/BUILD
@@ -27,6 +27,7 @@ java_library(
     visibility = ["//visibility:public"],
     deps = [
         "//cup:cup_runtime",
+        "//jflex/src/main/java/jflex/chars",
         "//jflex/src/main/java/jflex/performance",
         "//third_party/org/apache/ant",
     ],
