Add java_test for existing tests

--- a/jflex/BUILD
+++ b/jflex/BUILD
@@ -17,20 +17,9 @@ java_binary(
     ],
 )
 
-java_library(
+alias(
     name = "jflex",
-    srcs = glob(["src/main/java/**/*.java"]) + [
-        ":gen_parser",
-        ":gen_scanner",
-    ],
-    resources = glob(["src/main/resources/**"]),
-    visibility = ["//visibility:public"],
-    deps = [
-        "//cup:cup_runtime",
-        "//jflex/src/main/java/jflex/io",
-        "//jflex/src/main/java/jflex/performance",
-        "//third_party/org/apache/ant",
-    ],
+    actual = "//jflex/src/main/java/jflex",
 )
 
 cup(
@@ -50,14 +39,13 @@ jflex(
     skeleton = "src/main/jflex/skeleton.nested",
 )
 
-# Test helpers
-java_library(
-    name = "testing",
-    srcs = glob(["src/test/java/jflex/testing/**/*.java"]),
-    deps = [
-        "//third_party/com/google/guava",
-    ],
+filegroup(
+    name = "resources",
+    srcs = glob(["src/main/resources/**"]),
 )
+
+# Test helpers
+alias(name = "testing", actual = "//jflex/src/test/java/jflex/testing")
 
 # Tests
 filegroup(
